--- a/app/src/main/res/layout/calculator_buttons.xml
+++ b/app/src/main/res/layout/calculator_buttons.xml
@@ -9,8 +9,8 @@
         android:id="@+id/key_del"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintWidth_percent="0.45"
-        android:text="del"
+        app:layout_constraintWidth_percent="0.495"
+        android:text="@string/key_del"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/key_obelus"
@@ -21,7 +21,7 @@
         android:id="@+id/key_obelus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="÷"
+        android:text="@string/key_obelus"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/key_del"
         app:layout_constraintEnd_toStartOf="@id/key_multiplication"
@@ -32,7 +32,7 @@
         android:id="@+id/key_multiplication"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="*"
+        android:text="@string/key_multiplication"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/key_obelus"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,7 @@
         android:id="@+id/key_7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="7"
+        android:text="@string/key_7"
         app:layout_constraintStart_toStartOf="@id/key_del"
         app:layout_constraintTop_toBottomOf="@id/key_del"
         app:layout_constraintBottom_toTopOf="@+id/key_4"
@@ -53,7 +53,7 @@
         android:id="@+id/key_8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="8"
+        android:text="@string/key_8"
         app:layout_constraintTop_toBottomOf="@id/key_del"
         app:layout_constraintEnd_toEndOf="@id/key_del"
         app:layout_constraintBottom_toTopOf="@+id/key_5"
@@ -63,7 +63,7 @@
         android:id="@+id/key_9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="9"
+        android:text="@string/key_9"
         app:layout_constraintTop_toBottomOf="@id/key_obelus"
         app:layout_constraintStart_toStartOf="@id/key_obelus"
         app:layout_constraintEnd_toEndOf="@id/key_obelus"
@@ -74,7 +74,7 @@
         android:id="@+id/key_plus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="+"
+        android:text="@string/key_plus"
         app:layout_constraintTop_toBottomOf="@id/key_multiplication"
         app:layout_constraintStart_toStartOf="@id/key_multiplication"
         app:layout_constraintEnd_toEndOf="@id/key_multiplication"
@@ -85,7 +85,7 @@
         android:id="@+id/key_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="4"
+        android:text="@string/key_4"
         app:layout_constraintTop_toBottomOf="@id/key_7"
         app:layout_constraintStart_toStartOf="@id/key_7"
         app:layout_constraintEnd_toEndOf="@id/key_7"
@@ -96,7 +96,7 @@
         android:id="@+id/key_5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="5"
+        android:text="@string/key_5"
         app:layout_constraintTop_toBottomOf="@id/key_8"
         app:layout_constraintStart_toStartOf="@id/key_8"
         app:layout_constraintEnd_toEndOf="@id/key_8"
@@ -107,7 +107,7 @@
         android:id="@+id/key_6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="6"
+        android:text="@string/key_6"
         app:layout_constraintTop_toBottomOf="@id/key_9"
         app:layout_constraintStart_toStartOf="@id/key_9"
         app:layout_constraintEnd_toEndOf="@id/key_9"
@@ -118,7 +118,7 @@
         android:id="@+id/key_minus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="-"
+        android:text="@string/key_minus"
         app:layout_constraintTop_toBottomOf="@id/key_plus"
         app:layout_constraintStart_toStartOf="@id/key_plus"
         app:layout_constraintEnd_toEndOf="@id/key_plus"
@@ -129,7 +129,7 @@
         android:id="@+id/key_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1"
+        android:text="@string/key_1"
         app:layout_constraintTop_toBottomOf="@id/key_4"
         app:layout_constraintStart_toStartOf="@id/key_4"
         app:layout_constraintEnd_toEndOf="@id/key_4"
@@ -140,7 +140,7 @@
         android:id="@+id/key_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="2"
+        android:text="@string/key_2"
         app:layout_constraintTop_toBottomOf="@id/key_5"
         app:layout_constraintStart_toStartOf="@id/key_5"
         app:layout_constraintEnd_toEndOf="@id/key_5"
@@ -151,7 +151,7 @@
         android:id="@+id/key_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="3"
+        android:text="@string/key_3"
         app:layout_constraintTop_toBottomOf="@id/key_6"
         app:layout_constraintStart_toStartOf="@id/key_6"
         app:layout_constraintEnd_toEndOf="@id/key_6"
@@ -162,7 +162,7 @@
         android:id="@+id/key_equals"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:text="="
+        android:text="@string/key_equals"
         app:layout_constraintTop_toBottomOf="@id/key_minus"
         app:layout_constraintStart_toStartOf="@id/key_minus"
         app:layout_constraintEnd_toEndOf="@id/key_minus"
@@ -174,7 +174,7 @@
         android:id="@+id/key_0"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="0"
+        android:text="@string/key_0"
         app:layout_constraintTop_toBottomOf="@id/key_1"
         app:layout_constraintStart_toStartOf="@id/key_1"
         app:layout_constraintEnd_toEndOf="@id/key_2"
@@ -185,7 +185,7 @@
         android:id="@+id/key_."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="."
+        android:text="@string/key_dot"
         app:layout_constraintTop_toBottomOf="@id/key_3"
         app:layout_constraintStart_toStartOf="@id/key_3"
         app:layout_constraintEnd_toEndOf="@id/key_3"
