--- a/app/src/main/res/layout/entry_field.xml
+++ b/app/src/main/res/layout/entry_field.xml
@@ -2,20 +2,16 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/number"
-    >
+    android:background="@drawable/number">
 
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:gravity="end"
-            android:text=""
-            android:textColor="@color/white"
-            />
-
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:gravity="end"
+        android:text="@string/entry_field"
+        android:textColor="@color/white" />
 
 
 </FrameLayout>
