--- a/app/src/main/res/layout/calculator_buttons.xml
+++ b/app/src/main/res/layout/calculator_buttons.xml
@@ -9,11 +9,10 @@
         android:id="@+id/key_del"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintWidth_percent="0.495"
         android:text="@string/key_del"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/key_obelus"
+        app:layout_constraintStart_toStartOf="@id/key_7"
+        app:layout_constraintEnd_toEndOf="@id/key_8"
         app:layout_constraintBottom_toTopOf="@+id/key_7" />
 
     <Button
@@ -22,8 +21,8 @@
         android:layout_height="wrap_content"
         android:text="@string/key_obelus"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/key_del"
-        app:layout_constraintEnd_toStartOf="@id/key_multiplication"
+        app:layout_constraintStart_toStartOf="@id/key_9"
+        app:layout_constraintEnd_toEndOf="@id/key_9"
         app:layout_constraintBottom_toTopOf="@+id/key_9" />
 
     <Button
@@ -32,8 +31,8 @@
         android:layout_height="wrap_content"
         android:text="@string/key_multiplication"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/key_obelus"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/key_plus"
+        app:layout_constraintEnd_toEndOf="@id/key_plus"
         app:layout_constraintBottom_toTopOf="@+id/key_plus" />
 
     <Button
@@ -41,38 +40,41 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_7"
-        app:layout_constraintStart_toStartOf="@id/key_del"
-        app:layout_constraintTop_toBottomOf="@id/key_del"
-        app:layout_constraintBottom_toTopOf="@+id/key_4" />
+        app:layout_constraintBottom_toTopOf="@+id/key_4"
+        app:layout_constraintEnd_toStartOf="@+id/key_8"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/key_del" />
 
     <Button
         android:id="@+id/key_8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_8"
+        app:layout_constraintStart_toEndOf="@id/key_7"
         app:layout_constraintTop_toBottomOf="@id/key_del"
-        app:layout_constraintEnd_toEndOf="@id/key_del"
-        app:layout_constraintBottom_toTopOf="@+id/key_5" />
+        app:layout_constraintBottom_toBottomOf="@id/key_9"
+        app:layout_constraintEnd_toStartOf="@id/key_9"
+        app:layout_constraintTop_toTopOf="@id/key_9"/>
 
     <Button
         android:id="@+id/key_9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_9"
-        app:layout_constraintTop_toBottomOf="@id/key_obelus"
-        app:layout_constraintStart_toStartOf="@id/key_obelus"
-        app:layout_constraintEnd_toEndOf="@id/key_obelus"
-        app:layout_constraintBottom_toTopOf="@+id/key_6" />
+        app:layout_constraintBottom_toTopOf="@+id/key_6"
+        app:layout_constraintEnd_toStartOf="@id/key_plus"
+        app:layout_constraintStart_toEndOf="@+id/key_8"
+        app:layout_constraintTop_toBottomOf="@id/key_obelus" />
 
     <Button
         android:id="@+id/key_plus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_plus"
-        app:layout_constraintTop_toBottomOf="@id/key_multiplication"
-        app:layout_constraintStart_toStartOf="@id/key_multiplication"
-        app:layout_constraintEnd_toEndOf="@id/key_multiplication"
-        app:layout_constraintBottom_toTopOf="@+id/key_minus" />
+        app:layout_constraintBottom_toTopOf="@+id/key_minus"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/key_9"
+        app:layout_constraintTop_toBottomOf="@id/key_multiplication" />
 
     <Button
         android:id="@+id/key_4"
@@ -142,7 +144,7 @@
         app:layout_constraintTop_toBottomOf="@id/key_6"
         app:layout_constraintStart_toStartOf="@id/key_6"
         app:layout_constraintEnd_toEndOf="@id/key_6"
-        app:layout_constraintBottom_toTopOf="@+id/key_." />
+        app:layout_constraintBottom_toTopOf="@+id/key_point" />
 
     <Button
         android:id="@+id/key_equals"
@@ -153,7 +155,7 @@
         app:layout_constraintStart_toStartOf="@id/key_minus"
         app:layout_constraintEnd_toEndOf="@id/key_minus"
         app:layout_constraintTop_toTopOf="@id/key_3"
-        app:layout_constraintBottom_toBottomOf="@id/key_." />
+        app:layout_constraintBottom_toBottomOf="@id/key_point" />
 
     <Button
         android:id="@+id/key_0"
@@ -166,7 +168,7 @@
         app:layout_constraintBottom_toBottomOf="parent" />
 
     <Button
-        android:id="@+id/key_."
+        android:id="@+id/key_point"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_dot"
