--- a/app/src/main/res/layout/entry_field.xml
+++ b/app/src/main/res/layout/entry_field.xml
@@ -6,6 +6,7 @@
 
 
     <TextView
+        android:id="@+id/text_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
