--- a/app/src/main/res/layout/entry_field.xml
+++ b/app/src/main/res/layout/entry_field.xml
@@ -10,8 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="end"
-        android:text="@string/entry_field"
-        />
+        android:text="@string/entry_field" />
 
 
 </FrameLayout>
