--- a/app/src/main/res/layout/calculator_buttons.xml
+++ b/app/src/main/res/layout/calculator_buttons.xml
@@ -165,7 +165,7 @@
         app:layout_constraintTop_toBottomOf="@id/key_1"
         app:layout_constraintStart_toStartOf="@id/key_1"
         app:layout_constraintEnd_toEndOf="@id/key_2"
-        app:layout_constraintBottom_toTopOf="@id/Menu" />
+        app:layout_constraintBottom_toTopOf="@id/menu" />
 
     <Button
         android:id="@+id/key_point"
@@ -175,10 +175,10 @@
         app:layout_constraintTop_toBottomOf="@id/key_3"
         app:layout_constraintStart_toStartOf="@id/key_3"
         app:layout_constraintEnd_toEndOf="@id/key_3"
-        app:layout_constraintBottom_toTopOf="@id/Menu" />
+        app:layout_constraintBottom_toTopOf="@id/menu" />
 
     <Button
-        android:id="@+id/Menu"
+        android:id="@+id/menu"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/calculator"
